--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
   ],
   "dependencies": {
     "modernizr": "~2.6.2",
-    "backbone": "~1.1.0"
+    "backbone": "~1.1.0",
+    "lodash": "~2.2.1",
+    "jquery": "~2.0.3"
   }
 }
