--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "BSD-2-Clause",
+  "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-usemin": "~2.0.0",
@@ -20,7 +20,10 @@
     "time-grunt": "~0.1.1",
     "load-grunt-tasks": "~0.2.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "~0.5.0"
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-imagemin": "~0.3.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-rev": "~0.1.0"
   },
   "engines": {
     "node": ">=0.8.0"
