--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "modernizr": "~2.6.2",
     "backbone": "~1.1.0",
     "lodash": "~2.2.1",
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "bootstrap3-less": "*"
   }
 }
