--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-rev": "~0.1.0"
+    "grunt-rev": "~0.1.0",
+    "assemble-less": "~0.5.3"
   },
   "engines": {
     "node": ">=0.8.0"
